@@ -1,5 +1,6 @@
 v1.8 XW 23-07-2019
 added: lance driver (issue #13)
+added: ide controller
 
 v1.7 XW 20-07-2019
 fixed: bootrc (issue #7)
